--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <script src="js/bootstrap.bundle.js"></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <div class="col-10 col1">f4</div>
+            <div class="col-2 col2">
+                <div class="row n1">
+                    <div class="col">efrfeewjkrfwe</div>
+                </div>
+                <div class="row row-cols-1 n2">
+                    <div class="col m1 ">rfewrnkltnlkenfelkrfewrnkltnlkenfelknflwfnwfrfewrnkltnlkenfelknflwfnwfnflwfnwf</div>
+                    <div class="col m2">ejhew</div>
+                    <div class="col m3">ej,bwej,f</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
