--- a/index.html
+++ b/index.html
@@ -10,16 +10,24 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-10 col1">f4</div>
-            <div class="col-2 col2">
+        <div class="row justify-content-between align-items-start">
+            <div class="col-8 col1 tab-content" id="nav-tabContent">
+                <div class="tab-pane fade show active" id="item1" role="tabpanel">محتوای مربوط به آیتم اول</div>
+                <div class="tab-pane fade" id="item2" role="tabpanel">محتوای مربوط به آیتم دوم</div>
+                <div class="tab-pane fade" id="item3" role="tabpanel">محتوای مربوط به آیتم سوم</div>
+            </div>
+            <div class="col-3 col2 me-3">
                 <div class="row n1">
-                    <div class="col">efrfeewjkrfwe</div>
+                    <div class="col">efrfeewjkrfweefrfeewjkrfweefrfeewjkrfweefrfeewjkrfweefrfeewjkrfweefrfeewjkrfweefrfeewjkrfweefrfeewjkrfweefrfeewjkrfweefrfeewjkrfwe</div>
                 </div>
-                <div class="row row-cols-1 n2">
-                    <div class="col m1 ">rfewrnkltnlkenfelkrfewrnkltnlkenfelknflwfnwfrfewrnkltnlkenfelknflwfnwfnflwfnwf</div>
-                    <div class="col m2">ejhew</div>
-                    <div class="col m3">ej,bwej,f</div>
+                <div class="row row-cols-1 n2 my-5">
+                    <div class="col m1 ">
+                        <div class="list-group" id="list-tab" role="tablist">
+                            <a class="list-group-item list-group-item-action active" id="item1-tab" data-bs-toggle="list" href="#item1" role="tab">آیتم اول</a>
+                            <a class="list-group-item list-group-item-action" id="item2-tab" data-bs-toggle="list" href="#item2" role="tab">آیتم دوم</a>
+                            <a class="list-group-item list-group-item-action" id="item3-tab" data-bs-toggle="list" href="#item3" role="tab">آیتم سوم</a>
+                          </div>
+                    </div>
                 </div>
             </div>
         </div>
