--- a/index.html
+++ b/index.html
@@ -6,26 +6,67 @@
     <title>profile panel</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/bootstrap.rtl.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <script src="js/bootstrap.bundle.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="row justify-content-between align-items-start">
-            <div class="col-8 col1 tab-content" id="nav-tabContent">
-                <div class="tab-pane fade show active" id="item1" role="tabpanel">محتوای مربوط به آیتم اول</div>
+            <div class="col-8 mytab" id="nav-tabContent">
+                <div class="tab-pane fade show active" id="item1" role="tabpanel">
+                    <div class="col mb-3 ps-0">
+                        <div class="form-group">
+                            <input
+                                type="text"
+                                id="firstname"
+                                name="firstname"
+                                placeholder=" "
+                                required
+                                disabled
+                                value="ایلیا"
+                            />
+                            <label
+                                class="mylabel"
+                                for="firstname"
+                                >نام</label
+                            >
+                        </div>
+                    </div>
+                </div>
                 <div class="tab-pane fade" id="item2" role="tabpanel">محتوای مربوط به آیتم دوم</div>
                 <div class="tab-pane fade" id="item3" role="tabpanel">محتوای مربوط به آیتم سوم</div>
             </div>
-            <div class="col-3 col2 me-3">
-                <div class="row n1">
-                    <div class="col">efrfeewjkrfweefrfeewjkrfweefrfeewjkrfweefrfeewjkrfweefrfeewjkrfweefrfeewjkrfweefrfeewjkrfweefrfeewjkrfweefrfeewjkrfweefrfeewjkrfwe</div>
+            <div class="col-3 mytab me-3">
+                <div class="row mt-4 mycontent">
+                    <div class="col d-flex justify-content-center">
+                        <div class="profile-card w-75">
+                            <div class="row row-cols-1 ms-0">
+                                <div class="col"> 
+                                    <div class="profile-pic-wrapper">
+                                        <img src="https://picsum.photos/200" alt="Profile-Photo">
+                                        <span class="edit-icon">
+                                            <a href="#">
+                                                <i class="fas fa-pencil-alt"></i>
+                                            </a>
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="col ps-0">
+                                    <div class="profile-name fs-5">Roland Donald</div>
+                                </div>
+                                <div class="col ps-0">
+                                    <div class="profile-role fs-6">Cashier</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="row row-cols-1 n2 my-5">
-                    <div class="col m1 ">
+                <div class="row row-cols-1 mycontent my-5">
+                    <div class="col">
                         <div class="list-group" id="list-tab" role="tablist">
-                            <a class="list-group-item list-group-item-action active" id="item1-tab" data-bs-toggle="list" href="#item1" role="tab">آیتم اول</a>
-                            <a class="list-group-item list-group-item-action" id="item2-tab" data-bs-toggle="list" href="#item2" role="tab">آیتم دوم</a>
-                            <a class="list-group-item list-group-item-action" id="item3-tab" data-bs-toggle="list" href="#item3" role="tab">آیتم سوم</a>
+                            <a class="list-group-item list-group-item-action active d-flex justify-content-center" id="item1-tab" data-bs-toggle="list" href="#item1" role="tab">اطلاعات</a>
+                            <a class="list-group-item list-group-item-action d-flex justify-content-center" id="item2-tab" data-bs-toggle="list" href="#item2" role="tab">حساب</a>
+                            <a class="list-group-item list-group-item-action d-flex justify-content-center" id="item3-tab" data-bs-toggle="list" href="#item3" role="tab">تنظیمات</a>
                           </div>
                     </div>
                 </div>
