--- a/index.html
+++ b/index.html
@@ -1,77 +1,247 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>profile panel</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/bootstrap.rtl.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-    <script src="js/bootstrap.bundle.js"></script>
-</head>
-<body>
-    <div class="container">
-        <div class="row justify-content-between align-items-start">
-            <div class="col-8 mytab" id="nav-tabContent">
-                <div class="tab-pane fade show active" id="item1" role="tabpanel">
-                    <div class="col mb-3 ps-0">
-                        <div class="form-group">
-                            <input
-                                type="text"
-                                id="firstname"
-                                name="firstname"
-                                placeholder=" "
-                                required
-                                disabled
-                                value="ایلیا"
-                            />
-                            <label
-                                class="mylabel"
-                                for="firstname"
-                                >نام</label
-                            >
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>profile panel</title>
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/bootstrap.rtl.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+        />
+        <script src="js/bootstrap.bundle.js"></script>
+    </head>
+    <body>
+        <div class="container">
+            <div class="row justify-content-between align-items-start">
+                <div class="col-8 mytab" id="nav-tabContent">
+                    <div
+                        class="tab-pane fade show active container"
+                        id="item1"
+                        role="tabpanel"
+                    >
+                        <div class="row row-cols-1 row-cols-sm-2 ms-0">
+                            <div class="col my-4 ps-0">
+                                <div class="form-group">
+                                    <input
+                                        type="text"
+                                        id="firstname"
+                                        name="firstname"
+                                        placeholder=" "
+                                        required
+                                        disabled
+                                        value="ایلیا"
+                                    />
+                                    <label class="mylabel" for="firstname"
+                                        >نام</label
+                                    >
+                                </div>
+                            </div>
+                            <div class="col my-4 ps-0">
+                                <div class="form-group">
+                                    <input
+                                        name="lastname"
+                                        id="lastname"
+                                        type="text"
+                                        required
+                                        placeholder=" "
+                                        disabled
+                                        value="امانی"
+                                    />
+                                    <label
+                                        class="mylabel"
+                                        for="lastname"
+                                        >نام خانوادگی</label
+                                    >
+                                </div>
+                            </div>
+                            <div class="col my-4 ps-0">
+                                <div class="form-group">
+                                    <input
+                                        type="text"
+                                        name="phonenumber"
+                                        id="phonenumber"
+                                        required
+                                        placeholder=" "
+                                        disabled
+                                        value="09121111111"
+                                    />
+                                    <label
+                                        class="mylabel"
+                                        for="phonenumber"
+                                        >شماره تلفن</label
+                                    >
+                                </div>
+                            </div>
+                            <div class="col my-4 ps-0">
+                                <div class="form-group">
+                                    <input
+                                        type="text"
+                                        id="employeecode"
+                                        name="employeecode"
+                                        placeholder=" "
+                                        required
+                                        disabled
+                                        value="1234567890"
+                                    />
+                                    <label
+                                        class="mylabel"
+                                        for="employeecode"
+                                        >کد کارمندی</label
+                                    >
+                                </div>
+                            </div>
+                            <div class="col my-4 ps-0">
+                                <div class="form-group">
+                                    <input
+                                        name="nationalcode"
+                                        id="nationalcode"
+                                        type="text"
+                                        required
+                                        placeholder=" "
+                                        disabled
+                                        value="01526537122"
+                                    />
+                                    <label
+                                        class="mylabel"
+                                        for="nationalcode"
+                                        >کد ملی</label
+                                    >
+                                </div>
+                            </div>
+                            <div class="col my-4 ps-0">
+                                <div class="col form-group">
+                                    <input
+                                        type="date"
+                                        name="date-birthday"
+                                        id="date-birthday"
+                                        required
+                                        placeholder=" "
+                                        disabled
+                                        value="2006-06-11"
+                                    />
+                                    <label class="mylabel" for="date-birthday"
+                                        >تاریخ تولد</label
+                                    >
+                                </div>
+                            </div>
+                            <div class="col my-4 ps-0">
+                                <div class="col form-group">
+                                    <input
+                                        type="date"
+                                        name="date-employment"
+                                        id="date-employment"
+                                        required
+                                        placeholder=" "
+                                        disabled
+                                        value="2025-05-03"
+                                    />
+                                    <label
+                                        class="mylabel"
+                                        for="date-employment"
+                                        >تاریخ استخدام</label
+                                    >
+                                </div>
+                            </div>
+                            <div class="col my-4 ps-0">
+                                <div class="col form-group">
+                                    <input
+                                        type="text"
+                                        name="post"
+                                        id="post"
+                                        required
+                                        placeholder=" "
+                                        disabled
+                                        value="کارمند"
+                                    />
+                                    <label
+                                        class="mylabel"
+                                        for="post"
+                                        >سمت</label
+                                    >
+                                </div>
+                            </div>
                         </div>
+                        
+                    </div>
+                    <div class="tab-pane fade" id="item2" role="tabpanel">
+                        محتوای مربوط به آیتم دوم
+                    </div>
+                    <div class="tab-pane fade" id="item3" role="tabpanel">
+                        محتوای مربوط به آیتم سوم
                     </div>
                 </div>
-                <div class="tab-pane fade" id="item2" role="tabpanel">محتوای مربوط به آیتم دوم</div>
-                <div class="tab-pane fade" id="item3" role="tabpanel">محتوای مربوط به آیتم سوم</div>
-            </div>
-            <div class="col-3 mytab me-3">
-                <div class="row mt-4 mycontent">
-                    <div class="col d-flex justify-content-center">
-                        <div class="profile-card w-75">
-                            <div class="row row-cols-1 ms-0">
-                                <div class="col"> 
-                                    <div class="profile-pic-wrapper">
-                                        <img src="https://picsum.photos/200" alt="Profile-Photo">
-                                        <span class="edit-icon">
-                                            <a href="#">
-                                                <i class="fas fa-pencil-alt"></i>
-                                            </a>
-                                        </span>
+                <div class="col-3 mytab me-3">
+                    <div class="row mt-4 mycontent">
+                        <div class="col d-flex justify-content-center">
+                            <div class="profile-card w-75">
+                                <div class="row row-cols-1 ms-0">
+                                    <div class="col">
+                                        <div class="profile-pic-wrapper d-flex justify-content-center">
+                                            <img
+                                                src="images/4652.jpg"
+                                                alt="Profile-Photo"
+                                            />
+                                            <span class="edit-icon">
+                                                <a href="#">
+                                                    <i
+                                                        class="fas fa-pencil-alt"
+                                                    ></i>
+                                                </a>
+                                            </span>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col ps-0">
-                                    <div class="profile-name fs-5">Roland Donald</div>
-                                </div>
-                                <div class="col ps-0">
-                                    <div class="profile-role fs-6">Cashier</div>
+                                    <div class="col ps-0">
+                                        <div class="profile-name">
+                                            ایلیا امانی
+                                        </div>
+                                    </div>
+                                    <div class="col ps-0">
+                                        <div class="profile-role">
+                                            فرانت اند
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row row-cols-1 mycontent my-5">
-                    <div class="col">
-                        <div class="list-group" id="list-tab" role="tablist">
-                            <a class="list-group-item list-group-item-action active d-flex justify-content-center" id="item1-tab" data-bs-toggle="list" href="#item1" role="tab">اطلاعات</a>
-                            <a class="list-group-item list-group-item-action d-flex justify-content-center" id="item2-tab" data-bs-toggle="list" href="#item2" role="tab">حساب</a>
-                            <a class="list-group-item list-group-item-action d-flex justify-content-center" id="item3-tab" data-bs-toggle="list" href="#item3" role="tab">تنظیمات</a>
-                          </div>
+                    <div class="row row-cols-1 mycontent my-5">
+                        <div class="col">
+                            <div
+                                class="list-group"
+                                id="list-tab"
+                                role="tablist"
+                            >
+                                <a
+                                    class="list-group-item list-group-item-action active d-flex justify-content-center"
+                                    id="item1-tab"
+                                    data-bs-toggle="list"
+                                    href="#item1"
+                                    role="tab"
+                                    >اطلاعات</a
+                                >
+                                <a
+                                    class="list-group-item list-group-item-action d-flex justify-content-center"
+                                    id="item2-tab"
+                                    data-bs-toggle="list"
+                                    href="#item2"
+                                    role="tab"
+                                    >حساب</a
+                                >
+                                <a
+                                    class="list-group-item list-group-item-action d-flex justify-content-center"
+                                    id="item3-tab"
+                                    data-bs-toggle="list"
+                                    href="#item3"
+                                    role="tab"
+                                    >تنظیمات</a
+                                >
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
