--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <body>
         <div class="container">
             <div class="row justify-content-between align-items-start">
-                <div class="col-8 mytab" id="nav-tabContent">
+                <div class="col-8 mytab tab-content" id="nav-tabContent">
                     <div
                         class="tab-pane fade show active container"
                         id="item1"
                         role="tabpanel"
                     >
-                        <div class="row row-cols-1 row-cols-sm-2 ms-0">
+                        <div class="row row-cols-1 row-cols-sm-2 ms-0 mb-4">
                             <div class="col my-4 ps-0">
                                 <div class="form-group">
                                     <input
