--- a/index.html
+++ b/index.html
@@ -165,11 +165,77 @@
                         </div>
                         
                     </div>
-                    <div class="tab-pane fade" id="item2" role="tabpanel">
-                        محتوای مربوط به آیتم دوم
+                    <div class="tab-pane fade container" id="item2" role="tabpanel">
+                        <div class="row row-cols-1 row-cols-sm-2 ms-0 mb-4">
+                            <div class="col my-4 ps-0">
+                                <div class="col form-group">
+                                    <input
+                                        type="email"
+                                        name="email"
+                                        id="email"
+                                        required
+                                        placeholder=" "
+                                        disabled
+                                        value="iliya.amani@gmail.com"
+                                    />
+                                    <label class="mylabel" for="email"
+                                        >ایمیل</label
+                                    >
+                                </div>
+                            </div>
+                            <div class="col my-4 ps-0">
+                                <div class="col form-group">
+                                    <input
+                                        type="password"
+                                        name="password"
+                                        id="password"
+                                        required
+                                        placeholder=" "
+                                        disabled
+                                        value="12345678"
+                                    />
+                                    <label
+                                        class="mylabel"
+                                        for="password"
+                                        >رمز عبور</label
+                                    >
+                                </div>
+                            </div>    
+                            <div class="col my-4 ps-0">
+                                <div class="col form-group">
+                                    <textarea
+                                        name="bio"
+                                        id="bio"
+                                        required
+                                        placeholder=" "
+                                        disabled
+                                    >سلام من ایلیا هستم.</textarea>
+                                    <label
+                                        class="mylabel"
+                                        for="bio"
+                                        >بیوگرافی</label
+                                    >
+                                </div>
+                            </div>    
+                        </div>
                     </div>
-                    <div class="tab-pane fade" id="item3" role="tabpanel">
-                        محتوای مربوط به آیتم سوم
+                    <div class="tab-pane fade container" id="item3" role="tabpanel">
+                        <div class="row row-cols-1 row-cols-sm-2 ms-0 mb-4">
+                            <div class="col mb-3 ps-0">
+                                <div
+                                    class="checkbx form-check form-switch d-flex align-items-center gap-2"
+                                >
+                                    <input
+                                        class="checkbx2 form-check-input"
+                                        name="superuser"
+                                        type="checkbox"
+                                        id="theme"
+                                    />
+                                    <span class="dark">تاریک</span>
+                                    <span class="light">روشن</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-3 mytab me-3">
