--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                                     <div class="col">
                                         <div class="profile-pic-wrapper d-flex justify-content-center">
                                             <img
-                                                src="images/4652.jpg"
+                                                src="images/images.png"
                                                 alt="Profile-Photo"
                                             />
                                             <span class="edit-icon">
@@ -302,6 +302,14 @@
                                     href="#item3"
                                     role="tab"
                                     >تنظیمات</a
+                                >
+                                <a
+                                    class="list-group-item list-group-item-action d-flex justify-content-center"
+                                    id="item4-tab"
+                                    data-bs-toggle="list"
+                                    href="#"
+                                    role="tab"
+                                    >ویرایش</a
                                 >
                             </div>
                         </div>
